# savy-jeetaga-hack

main/contracts/: hardhat.config.ts  package-lock.json  package.json
main/contracts/contracts/: ConsentManager.sol  KeyRecovery.sol  NeuroDataRegistry.sol
main/contracts/scripts/: deploy.ts
main/crypto-core/: CMakeLists.txt
main/crypto-core/include/: neuro_crypto.h
main/frontend/savy-frontend/: index.html  package-lock.json  package.json
main/frontend/savy-frontend/src/: App.css  App.jsx  index.css
main/frontend/savy-frontend/src/components/: EEGChart.jsx  Header.jsx  MetricCard.jsx  Sidebar.jsx  SpectralPanel.jsx
main/frontend/savy-frontend/src/pages/: AnalyticsPage.jsx  CustomerProfilePage.jsx  DoctorAccessRequestPage.jsx  DoctorRequestAccessPage.jsx  LoginPage.jsx  MyPermissionsPage.jsx  MyRequestsPage.jsx  PatientListPage.jsx  SessionArchivesPage.jsx  SessionHistoryPage.jsx  UserPage.jsx
main/go-blockchain/: go.mod
main/go-blockchain/cmd/neuro-chain/: main.go
main/go-blockchain/internal/storage/: ipfs.go
main/python-orchestration/: README.md  cert.pem  key.pem  pyproject.toml  requirements.txt  server.py
main/python-orchestration/api/: main.py
main/python-orchestration/savy_neuro_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
main/python-orchestration/services/: blockchain_service.py  brain_signal_generator.py  eeg_service.py  ipfs_service.py  polygon_id_service.py
plans/: SAVY-Architecture-Analysis.md  SAVY-HBIOT003-Implementation-Plan.md  SAVY-Software-Integration.md
