[project]
name = "savy-neuro-data"
version = "0.1.0"
description = "Privacy-preserving neural data management with blockchain consent"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "SAVY Team", email = "dev@savy.ai"}
]
license = "Apache-2.0"

dependencies = [
  "fastapi>=0.104,<0.105",
  "uvicorn[standard]>=0.24,<0.25",
  "python-multipart>=0.0.6,<0.0.7",
  "pydantic>=2.5,<2.6",
  "websockets>=12.0,<12.1",
  "numpy>=1.26,<1.27",
  "scipy>=1.11,<1.12",
  "matplotlib>=3.8,<3.9",
  "pandas>=2.1,<2.2",
  "seaborn>=0.12,<0.13",
  "scikit-learn>=1.3,<1.4",
  "python-jose[cryptography]>=3.3,<3.4",
  "passlib[bcrypt]>=1.7,<1.8",
  "httpx>=0.25,<0.26",
  "pytest>=7.4,<7.5",
  "pytest-asyncio>=0.23,<0.24",
  "python-dotenv>=1.0,<1.1"
]

[tool.setuptools]
packages = ["api", "services"]

[project.urls]
homepage = "https://github.com/savy-ai/neuro-data"
repository = "https://github.com/savy-ai/neuro-data"
documentation = "https://docs.savy.ai"

[project.scripts]
savy-server = "api.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
log_level = "info"

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line-length = 120
skip_gitignore = true
py_version = 39
src_paths = ["src"]
